--- a/src/css/style.css
+++ b/src/css/style.css
@@ -112,3 +112,32 @@ foo-ter p {
         display:none;
     }
 }
+
+/* loading */
+
+loa-ding{
+    width:100%;
+    height:100%;
+    background:var(--primary-color);
+    z-index:100;
+    position:absolute;
+    display:flex;
+    justify-content: center;
+    align-items: center;
+}
+.loading{
+    width:50px;
+    height:50px;
+    background:var(--secondary-color);
+    border-radius: 50%;
+    animation: loading 1s infinite;
+}
+
+@keyframes loading{
+    from{
+        transform: scale(.5);
+    }
+    to{
+        transform: scale(2);
+    }
+}
